# OpenUZOR

./: .gitignore  CMakeLists.txt
common/: command_options.hpp
solvers/: CMakeLists.txt
solvers/CGMwP/ConjGradMethWithPrec/: CMakeLists.txt  main.cpp
solvers/directIntegration/: .cproject  .project  directIntegration.cpp
solvers/eigenSolver/: CMakeLists.txt  eigenSolver.cpp  eigenSolver.h  main_tests.cpp  test01.cpp
solvers/staticSESolver/: CMakeLists.txt  main.cpp
utilities/: CMakeLists.txt
utilities/convertOrder/: CMakeLists.txt  elementorderconverter.cpp  elementorderconverter.h  main.cpp
utilities/prepareSE/: .cproject  .project  CMakeLists.txt  main.cpp  prepareSE.cpp  sebuilder.cpp  sebuilder.h
utilities/qPrepareSE/: CMakeLists.txt  main.cpp  qpreparese.cpp  qpreparese.h  ru_ru.ts
utilities/qSbfToVtk/: CMakeLists.txt  main.cpp  qSbfToVtk.pro  sbftovtkdialog.cpp  sbftovtkdialog.h  sbftovtkdialog.ui
utilities/reorder/: CMakeLists.txt  main.cpp  reorderer.cpp  reorderer.h
utilities/sbfToVtk/: .cproject  .project  CMakeLists.txt  main.cpp  sbfToVTK.cpp  sbfToVTK.h
utilities/sbfToVtk/src/: main.cpp  sbfToVTK.cpp
utilities/sbfView/: CMakeLists.txt
utilities/sbfView/src/: CMakeLists.txt  main.cpp  sbfdataitem.cpp  sbfdataitem.h  sbfdatamodel.cpp  sbfdatamodel.h  sbfmodel.cpp  sbfmodel.h  sbftoolbar.cpp  sbftoolbar.h  sbfview.cpp  sbfview.h  sbfviewmainwindow.cpp  sbfviewmainwindow.h
