option(BUILD_PREPARE_SE "Build prepareSE project" ON)
option(BUILD_QPREPARE_SE "Build qPrepareSE project" ON)
option(BUILD_SBFTOVTK "Build sbfToVtk project" ON)
option(BUILD_QSBFTOVTK "Build qSbfToVtk project" ON)
option(BUILD_SBFVIEW "Build sbfView project" ON)

if(BUILD_PREPARE_SE)
    message("Configuring prepareSE")
    add_subdirectory(prepareSE)
endif()

if(BUILD_QPREPARE_SE)
    message("Configuring qPrepareSE")
    add_subdirectory(qPrepareSE)
endif()

if(BUILD_SBFTOVTK)
    message("Configuring sbfToVtk")
    add_subdirectory(sbfToVtk)
endif()

if(BUILD_QSBFTOVTK)
    message("Configuring qSbfToVtk")
    add_subdirectory(qSbfToVtk)
endif()

if(BUILD_SBFVIEW)
    message("Configuring sbfView")
    add_subdirectory(sbfView)
endif()
